# ocvsmd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: cli_log_tail.sh  configure_yakut.sh  link_ocvsmd.sh  yakut_monitor_udp.sh
.devcontainer/toolshed-amd64/: devcontainer.json
.devcontainer/toolshed-arm64/: devcontainer.json
docs/: firmware_update_sequence.md  ipc_design.md  svc_design.md
include/ocvsmd/sdk/: daemon.hpp  defines.hpp  execution.hpp  file_server.hpp  node_command_client.hpp  node_pub_sub.hpp  node_registry_client.hpp  node_rpc_client.hpp
init.d/: ocvsmd.toml
src/cli/: CMakeLists.txt  dsdl_helpers.hpp  fmt_helpers.hpp  main.cpp
src/common/: CMakeLists.txt  common_helpers.hpp  dsdl_helpers.hpp  logging.hpp
src/common/dsdl/ocvsmd/common/: Error.0.1.dsdl
src/common/io/: io.cpp  io.hpp  socket_address.cpp  socket_address.hpp  socket_buffer.hpp
src/common/ipc/: channel.hpp  client_router.cpp  client_router.hpp  gateway.hpp  ipc_types.hpp  server_router.cpp  server_router.hpp
src/common/ipc/pipe/: client_context.hpp  client_pipe.hpp  server_pipe.hpp  socket_base.cpp  socket_base.hpp  socket_client.cpp  socket_client.hpp  socket_server.cpp  socket_server.hpp
src/common/svc/file_server/: list_roots_spec.hpp  pop_root_spec.hpp  push_root_spec.hpp
src/common/svc/node/: access_registers_spec.hpp  exec_cmd_spec.hpp  list_registers_spec.hpp
src/common/svc/relay/: create_raw_sub_spec.hpp  raw_rpc_client_spec.hpp
src/daemon/: main.cpp
src/daemon/engine/: CMakeLists.txt  config.cpp  config.hpp  engine.cpp  engine_helpers.hpp
src/daemon/engine/cyphal/: can_transport_bag.hpp  file_provider.cpp  transport_helpers.hpp  udp_transport_bag.hpp
src/daemon/engine/platform/can/: can_media.hpp  socketcan.h
src/daemon/engine/platform/udp/: udp_media.hpp  udp_sockets.hpp
src/daemon/engine/svc/file_server/: list_roots_service.cpp  pop_root_service.cpp  push_root_service.cpp
src/daemon/engine/svc/node/: access_registers_service.cpp  exec_cmd_service.cpp  list_registers_service.cpp
src/sdk/: CMakeLists.txt  daemon.cpp  file_server.cpp  node_command_client.cpp  node_registry_client.cpp
src/sdk/svc/: as_sender.hpp  client_helpers.hpp
src/sdk/svc/file_server/: list_roots_client.cpp  list_roots_client.hpp  pop_root_client.cpp  pop_root_client.hpp  push_root_client.cpp  push_root_client.hpp
src/sdk/svc/node/: access_registers_client.cpp  access_registers_client.hpp  exec_cmd_client.cpp  exec_cmd_client.hpp  list_registers_client.cpp  list_registers_client.hpp
src/sdk/svc/relay/: create_raw_sub_client.cpp  create_raw_sub_client.hpp  raw_publisher_client.cpp  raw_publisher_client.hpp  raw_rpc_client.cpp  raw_rpc_client.hpp  raw_subscriber_client.cpp  raw_subscriber_client.hpp
test/: CMakeLists.txt  verify_utilz.hpp
test/common/: common_gtest_helpers.hpp
test/common/io/: io_gtest_helpers.hpp  test_socket_address.cpp
test/common/ipc/: client_router_mock.hpp  gateway_mock.hpp  ipc_gtest_helpers.hpp  server_router_mock.hpp  test_client_router.cpp  test_server_router.cpp
test/common/ipc/pipe/: client_pipe_mock.hpp  server_pipe_mock.hpp
test/daemon/engine/: CMakeLists.txt
test/daemon/engine/cyphal/: msg_sessions_mock.hpp  scattered_buffer_storage_mock.hpp
test/integration/: CMakeLists.txt
test/sdk/: CMakeLists.txt  main.cpp
test/sdk/svc/relay/: test_raw_publisher_client.cpp
(+26 files in other folders)
